# file-watcher

./: .watcherignore  README.md  pyproject.toml
src/file_watcher/: __init__.py  watcher.py
