[project]
name = "file-watcher"
version = "0.1.0"
description = "file watcher"
readme = "README.md"
authors = [
    { name = "zhitoo", email = "hshafiei374@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.16.0",
    "watchdog>=6.0.0",
]

[project.scripts]
file-watcher = "file_watcher.watcher:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
